Fix widths on writing page on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,9 +147,11 @@ code {
   .posts {
     clear: both;
     float: left;
+    width: 100%;
   }
   .tweets {
     clear: both;
     float: left;
+    width: 100%;
   }
 }
